--- a/src/mixins/friendsListSidebar.pug
+++ b/src/mixins/friendsListSidebar.pug
@@ -98,20 +98,24 @@ mixin friendsListSidebar()
                             template(v-else)
                                 span(v-text="friend.name || friend.id")
                                 el-button(type="text" icon="el-icon-close" size="mini" @click.stop="confirmDeleteFriend(friend.id)" style="margin-left:5px")
-            el-tab-pane
+            el-tab-pane(lazy)
                 template(#label)
                     span {{ $t('side_panel.groups') }}
-                    span(style="color:#909399;font-size:12px;margin-left:10px") ({{ groupInstances.flat().length }})
-                template(v-if="groupInstances.length !== 0" v-for="(group, index) in groupInstances" :key="group[0].group.groupId")
-                    .x-friend-group.x-link(@click="this.groupInstances[index].isCollapsed = !this.groupInstances[index].isCollapsed")
-                            i.el-icon-arrow-right(:class="{ rotate: true }")
-                            span(style="margin-left:5px") {{ group[0].group.name }} &horbar; {{ group.length }}
-                    .x-friend-list(style="padding:10px 5px")
-                        .x-friend-item(v-for="ref in group" :key="ref.instance.id" @click="showGroupDialog(ref.instance.ownerId)")
-                            .avatar
-                                img(v-lazy="ref.group.iconUrl")
-                            .detail
-                                span.name
-                                    span(v-text="ref.group.name")
-                                    span(style="font-weight:normal;margin-left:5px") ({{ ref.instance.userCount }}/{{ ref.instance.capacity }})
-                                location.extra(:location="ref.instance.location" :link="false")
+                    span(style="color:#909399;font-size:12px;margin-left:10px") ({{ groupInstances.length }})
+                .x-friend-list(style="padding:10px 5px")
+                    template(v-for="(group, index) in groupedGroupInstances" :key="group[0].group?.groupId")
+                        .x-friend-group.x-link.sidebar-group-title(:style="{padding: index === 0 ? '0px 0px 5px' : undefined}")
+                            div(@click="toggleGroupSidebarCollapse(group[0].group?.groupId)")
+                                i.el-icon-arrow-right(:class="{ rotate: !groupInstancesCfg[group[0].group?.groupId]?.isCollapsed}")
+                                span(style="margin-left:5px") {{ group[0].group.name }} &horbar; {{ group.length }}
+                            div
+                                i.el-icon-sort
+                        div(v-if="!isGroupSidebarSortMode && !groupInstancesCfg[group[0].group?.groupId]?.isCollapsed")
+                            .x-friend-item(v-for="ref in group" :key="ref.instance?.id" @click="showGroupDialog(ref.instance.ownerId)")
+                                .avatar
+                                    img(v-lazy="ref.group?.iconUrl")
+                                .detail
+                                    span.name
+                                        span(v-text="ref.group.name")
+                                        span(style="font-weight:normal;margin-left:5px") ({{ ref.instance?.userCount }}/{{ ref.instance?.capacity }})
+                                    location.extra(:location="ref.instance?.location" :link="false")
