--- a/src/mixins/dialogs/userDialog.pug
+++ b/src/mixins/dialogs/userDialog.pug
@@ -669,6 +669,7 @@ mixin userDialog
                                         el-dropdown-item(
                                             :disabled='item === userDialogGroupSortingOptions.inGame && userDialog.id !== API.currentUser.id'
                                             v-for='item in userDialogGroupSortingOptions'
+                                            :key='item.name'
                                             v-text='item.name'
                                             @click.native='setUserDialogGroupSorting(item)')
                             el-button(
@@ -874,6 +875,7 @@ mixin userDialog
                                 el-dropdown-menu(#default='dropdown')
                                     el-dropdown-item(
                                         v-for='item in userDialogWorldSortingOptions'
+                                        :key='item.name'
                                         v-text='item.name'
                                         @click.native='setUserDialogWorldSorting(item)')
                             span(style='margin: 0 5px') {{ $t('dialog.user.worlds.order_by') }}
@@ -888,6 +890,7 @@ mixin userDialog
                                 el-dropdown-menu(#default='dropdown')
                                     el-dropdown-item(
                                         v-for='item in userDialogWorldOrderOptions'
+                                        :key='item.name'
                                         v-text='item.name'
                                         @click.native='setUserDialogWorldOrder(item)')
                     .x-friend-list(v-loading='userDialog.isWorldsLoading' style='margin-top: 10px; min-height: 60px')
