add show solo, no friend instance btn, add friend icon, i18n

--- a/src/index.pug
+++ b/src/index.pug
@@ -107,7 +107,8 @@ html
                         :get-world-name='getWorldName'
                         :is-dark-mode='isDarkMode'
                         :dt-hour12='dtHour12'
-                        @open-previous-instance-info-dialog='showPreviousInstanceInfoDialog')
+                        @open-previous-instance-info-dialog='showPreviousInstanceInfoDialog'
+                        :friends-map='friends')
 
                 //- settings
                 include ./mixins/tabs/settings.pug
