--- a/src/mixins/dialogs/invites.pug
+++ b/src/mixins/dialogs/invites.pug
@@ -327,7 +327,7 @@ mixin invites
                         @click='showEditAndSendInviteDialog("api", scope.row)')
         template(#footer)
             el-button(type='small' @click='cancelSendInviteRequest') {{ $t('dialog.invite_request_message.cancel') }}
-            el-button(type='small' @click='API.refreshInviteMessageTableData("api")') {{ $t('dialog.invite_request_message.refresh') }}
+            el-button(type='small' @click='API.refreshInviteMessageTableData("request")') {{ $t('dialog.invite_request_message.refresh') }}
 
     //- dialog: Send Invite Message Confirm
     el-dialog.x-dialog(
