--- a/src/mixins/dialogs/userDialog.pug
+++ b/src/mixins/dialogs/userDialog.pug
@@ -939,14 +939,14 @@ mixin userDialog
                                 .x-friend-list(
                                     style='margin-top: 10px; margin-bottom: 15px; min-height: 60px; max-height: none')
                                     .x-friend-item.x-friend-item-border(
-                                        v-for='WorldDialog in list[2]'
-                                        :key='WorldDialog.favoriteId'
-                                        @click='showWorldDialog(WorldDialog.id)')
+                                        v-for='world in list[2]'
+                                        :key='world.favoriteId'
+                                        @click='showWorldDialog(world.id)')
                                         .avatar
-                                            img(v-lazy='WorldDialog.thumbnailImageUrl')
+                                            img(v-lazy='world.thumbnailImageUrl')
                                         .detail
-                                            span.name(v-text='WorldDialog.name')
-                                            span.extra(v-if='WorldDialog.occupants') ({{ world.occupants }})
+                                            span.name(v-text='world.name')
+                                            span.extra(v-if='world.occupants') ({{ world.occupants }})
                         template(v-else-if='!userDialog.isFavoriteWorldsLoading')
                             div(style='display: flex; justify-content: center; align-items: center; height: 100%')
                                 span(style='font-size: 16px') No favorite worlds found.
