Add UI management page for cloud data APIs

--- a/src/mixins/dialogs/dialogs.pug
+++ b/src/mixins/dialogs/dialogs.pug
@@ -212,3 +212,7 @@ mixin dialogs
     PrimaryPasswordDialog(
         :enablePrimaryPasswordDialog.sync='enablePrimaryPasswordDialog'
         @setPrimaryPassword='setPrimaryPassword')
+
+    CloudDataApiDialog(
+        :isCloudDataApiDialogVisible.sync='isCloudDataApiDialogVisible'
+        :cloudDataApiUrl.sync='cloudDataApiUrl')
