Add API authentication

--- a/src/mixins/dialogs/dialogs.pug
+++ b/src/mixins/dialogs/dialogs.pug
@@ -215,4 +215,5 @@ mixin dialogs
 
     CloudDataApiDialog(
         :isCloudDataApiDialogVisible.sync='isCloudDataApiDialogVisible'
-        :cloudDataApiUrl.sync='cloudDataApiUrl')
+        :cloudDataApiUrl.sync='cloudDataApiUrl'
+        :cloudDataApiUsername.sync='cloudDataApiUsername')
