Add cloud API support, refactor DB classes, update settings UI

--- a/src/mixins/tabs/settings.pug
+++ b/src/mixins/tabs/settings.pug
@@ -1075,7 +1075,7 @@ mixin settingsTab
                         simple-switch(
                             :label='$t("view.settings.advanced.advanced.cloud_data_api.enable")' 
                             :tooltip='$t("view.settings.advanced.advanced.cloud_data_api.enable_tooltip")'
-                            :value='remoteDataApiEnabled'
+                            :value='cloudDataApiEnabled'
                             @change='changeCloudDataApi'
                             :long-label='true')
                     .options-container-item
