--- a/src/assets/scss/themes/theme.pink.scss
+++ b/src/assets/scss/themes/theme.pink.scss
@@ -70,7 +70,7 @@ textarea {
 .el-textarea .el-input__count,
 .el-textarea__inner,
 .x-menu-container {
-    background-color: var(--lighter-bg);
+    background-color: var(--lighter-bg) !important;
 }
 .el-color-picker__panel {
     border-color: var(--lighter-bg);
